# Opcua-Modbus-Server

./: .gitignore  CMakeLists.txt  Makefile  README.md  UAServer.c  UAServer.h  UAServer_old.c  config_example.json  example.json  log.h  main.c
src/: ModusPoller.h  UAServer.c  UAServer.h  log.h  main.cpp  server.cpp  server.hpp
test-slave/: Slave.py  tcpSlave.py  tcpmaster_example.py
utils/: HashMap.c  HashMap.h  Log.h  open62541_changed.h
